docker-k8s/k8s/mariadb-statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mariadb
  namespace: keepcoding
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mariadb
  serviceName: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      affinity:
        podAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchLabels:
                  app: spring-app
              topologyKey: "kubernetes.io/hostname"
            weight: 1
      containers:
      - image: mariadb
        name: mariadb
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mariadb-data
          mountPath: /var/lib/mysql
  volumeClaimTemplates:
  - metadata:
      name: mariadb-data
      namespace: keepcoding 
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "standard"
      resources:
        requests:
          storage: 1Gi
