docker-k8s/k8s/spring-app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-app
  namespace: keepcoding
spec:
  replicas: 3
  selector:
    matchLabels:
      app: spring-app
  template:
    metadata:
      name: spring-app
      labels:
        app: spring-app
    spec:
      affinity:
        podAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 1
            podAffinityTerm:
              labelSelector:
                matchLabels:
                  app: mariadb
              topologyKey: "kubernetes.io/hostname"
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 1
            podAffinityTerm: 
              labelSelector: 
                matchLabels:
                  app: spring-app
              topologyKey: "kubernetes.io/hostname"
      containers:
      - image: amoragon/spring-app
        name: spring-app
        ports:
        - containerPort: 8080
