docker-k8s/k8s/mariadb-headless.yml
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: keepcoding
  labels:
    app: mariadb
spec:
  ports:
  - port: 3306
    name: mariadb
  clusterIP: None
  selector:
    app: mariadb
