docker-k8s/k8s/spring-app-clusterip.yml
apiVersion: v1
kind: Service
metadata:
  name: spring-app
  namespace: keepcoding
spec:
  type: ClusterIP
  selector:
    app: spring-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
